updating build.sbt for spark compatibility