@@ -5,13 +5,16 @@ ThisBuild / version          := "0.1.0-SNAPSHOT"
 ThisBuild / organization     := "com.example"
 ThisBuild / organizationName := "example"
 
+ThisBuild / javaOptions ++= Seq(
+  "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"
+)
+
 lazy val root = (project in file("."))
   .settings(
     name := "LearningSpark",
     libraryDependencies ++= Seq(
       "org.apache.spark" %% "spark-sql" % "3.5.3",
       munit % Test
-    )
+    ),
+    fork := true
   )
-
-// See https://www.scala-sbt.org/1.x/docs/Using-Sonatype.html for instructions on how to publish to Sonatype.
